# mini-emulator

./: Cargo.toml  README.md  config.json
src/: Tareas.md  config.rs  emulator.rs  error.rs  lib.rs  main.rs  parser.rs
src/emulator/: cpu.rs  instruction.rs  memory.rs  pcb.rs  scheduler.rs  storage.rs
